fix: parameterize header height, fix virtual scrollbar height
- parameterize the header height (--header-height)
- fix a bug with the virtual drawer scrollbar in narrow desktop
  views, which didn't account for the mobile panel height

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   overscroll-behavior: none;
 }
 
+:root {
+  --header-height: 50px;
+  --bottom-pane-gap: 70px;
+}
+
 #root.mobileAgent {
   -webkit-user-select: none;
 }
